Fixed the navbar and added a sidebar on mobile screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,7 @@ body {
     );
   }
 }
+
+.no-scroll {
+  overflow: hidden;
+}
